--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
           <!-- Logo -->
           <h1 id="logo">
             <a href="https://github.com/CommunityPro/portfolio-html"
-              ><img src="./assets/logo.png" alt="Your Logo"
+              ><img src="https://www.odu.edu/sites/default/files/styles/person_profile_node/public/images/f1c2abbb.jpg" alt="Your Logo"
             /></a>
           </h1>
           <!-- Navbar links -->
