--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio Template - Open source</title>
     <meta name="title" content="Portfolio Template - Open source" />
     <meta
-      name="description"
+      name="Hello"
       content="Build or customize your portfolio website using this super easy template. Free to use if you are a member of the community or a contributor to this project"
     />
 
