--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Portfolio Template - Open source" />
     <meta
       name="Hello"
-      content="Build or customize your portfolio website using this super easy template. Free to use if you are a member of the community or a contributor to this project"
+      content="I dont know what Im doing"
     />
 
     <!-- Open Graph / Facebook -->
