--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://github.com/CommunityPro/portfolio-html"
+      content=""
     />
     <meta property="og:title" content="Portfolio Template - Open source" />
     <meta
